# adtensor

./: Cargo.toml  README.md
benches/: bench_adtensor.rs  bench_elementwise.rs  bench_matrix.rs  bench_tensor_dot.rs  bench_tensor_matmul.rs  bench_vector.rs
src/: activation.rs  adscalar.rs  adtensor.rs  autograd.rs  expression.rs  graph.rs  lib.rs  main.rs  matrix.rs  ops.rs  scalar.rs  shape.rs  small_arrayvec.rs  tensor.rs  tensor_expr.rs  tensor_old.rs  tensor_ops.rs  vector.rs  vector_ops.rs
src/Old/autograd/: adscalar.rs  adtensor.rs  gradient.rs  graph.rs  loss.rs
src/Old/net/: function.rs  linear.rs
src/autograd/: adscalar.rs  adtensor.rs  graph.rs  mod.rs  parameter.rs  scalar.rs
src/core/: mod.rs  shape.rs  tensor.rs
src/net/: activation.rs  initializer.rs  layer.rs  mod.rs
src/nn/: activation.rs  init.rs  initializer.rs  linear.rs  mod.rs  sequential.rs
src/old/: expression.rs  tensor.rs  tensor_expr.rs
src/optim/: mod.rs  optimizer.rs  sgd.rs
