[package]
name = "adtensor"
version = "0.0.3"
authors = ["Charles Earp <charles.r.earp@gmail.com>"]
edition = "2018"
description = "Compositional machine learning library."
license = "GPL-3.0"
repository = "https://github.com/charles-r-earp/adtensor"
keywords = ["Auto", "Learning", "Tensor", "Grad", "Net"]

[dependencies]
rspirv = "0.5.4"
spirv_headers = "1.3"
