[package]
name = "adtensor"
version = "0.0.3"
authors = ["Charles Earp <charles.r.earp@gmail.com>"]
edition = "2018"
description = "Graph based machine learning library."
license = "MIT"
repository = "https://github.com/charles-r-earp/adtensor"
keywords = ["Auto", "Learning", "Tensor", "Grad", "Net"]

[dependencies]
ndarray = "0.12.1"
ocl = "0.19.2"
